--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 
     <div class="mbr-container">
-        <h2 class="mbr-title align-center mbr-fonts-style mbr-bold display-1">【一家人本舖小檔案】</h2>
+        <h2 class="mbr-title align-center mbr-fonts-style mbr-bold display-1">一家人本舖小檔案</h2>
 
 
     </div>
